--- a/selectresindus.html
+++ b/selectresindus.html
@@ -13,7 +13,7 @@
             color: rgb(7, 197, 99);
         }
 
-        .TituloPeru + section:{
+        .TituloPeru + section{
             color: black;
         }
 
